# github-packager

./: .gitignore  README.md  packager.py  pyproject.toml  repositories.txt  requirements.txt
src/: config.py  docker_tools.py  github_api.py  images.py  instances.py  packager.py  patches.py
